# LayeredCompModel

./: .gitignore  CHANGELOG.md  MODEL_SPEC.md  README.md  SPEC.md  pyproject.toml
.github/workflows/: ci.yml
docs/: conf.py  index.rst
examples/: bagging_quickstart.py  quickstart.py
src/layeredcompmodel/: __init__.py  bagging_model.py  model.py
tests/: test_bagging_model.py  test_model.py
