[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "layeredcompmodel"
version = "0.2.1"
description = "Hierarchical tree-based model for robust parcel sale price predictions using weighted Wilson means."
readme = "README.md"
license = {file = "LICENSE"}
authors = [{name = "John Kossa"}]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
requires-python = ">=3.10"
dependencies = [
    "ipykernel>=7.2.0",
    "numpy>=1.24.0",
    "pandas>=2.0.0",
    "scikit-learn>=1.3.0",
    "scipy>=1.10.0",
]
keywords = ["scikit-learn", "regression", "hierarchical-model", "real-estate"]

[project.urls]
Homepage = "https://github.com/JohnKossa/layeredcompmodel"
Repository = "https://github.com/JohnKossa/layeredcompmodel.git"
"Bug Tracker" = "https://github.com/JohnKossa/layeredcompmodel/issues"

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov",
    "scikit-learn[dev]",
    "black",
    "mypy",
    "ruff",
    "build",
    "sphinx>=7.0",
    "sphinx-rtd-theme",
    "sphinx-autoapi",
    "myst-parser",
]

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-ra --cov=layeredcompmodel --cov-report=html"
testpaths = ["tests"]

[tool.hatch.build.targets.wheel]
packages = ["src/layeredcompmodel"]


[tool.hatch.version]
source = "attr: layeredcompmodel.__version__"

[tool.hatch.envs.dev.scripts]
cov = "pytest --cov=layeredcompmodel --cov-report=term-missing --cov-fail-under=90"
mypy-check = "mypy src/layeredcompmodel"
ruff-check = "ruff check src/ tests/"
build = "hatch build"
docs = "sphinx-build -b html docs docs/_build/html"

[tool.mypy]
ignore_missing_imports = true
disallow_untyped_defs = false
warn_return_any = false
warn_unreachable = false
check_untyped_defs = false
